--- a/Single.html
+++ b/Single.html
@@ -26,11 +26,17 @@
             <div class="ct_suspension_content_title">
                 <h2>Selección de vehículo</h2>
             </div>
-            <div class="selectores">
-                <select class="selectores_marca" style="width: 20%;" id="marca">
+            <div class="selectores_content">
+                <select class="selector_marca" style="width: 20%;" id="marca">
                     <option></option>
                     <option value="1">Toyota</option>
                     <option>Honda</option>
+                </select>
+                <select class="selector_modelo" disabled="true" style="width: 20%;" id="modelo">
+                    <option></option>
+                </select>
+                <select class="selector_año" disabled="true" style="width: 20%;" id="año">
+                    <option></option>
                 </select>
 
             </div>
