--- a/Single.html
+++ b/Single.html
@@ -27,15 +27,23 @@
                 <h2>Selección de vehículo</h2>
             </div>
             <div class="selectores_content">
-                <select class="selector_marca" style="width: 20%;" id="marca">
+                <select class="selector" style="width: 200px;" id="marca">
                     <option></option>
                     <option value="1">Toyota</option>
                     <option>Honda</option>
+                    <option>Honda</option>
+                    <option>Honda</option>
+                    <option>Honda</option>
+                    <option>Honda</option>
+                    <option>Honda</option>
+                    <option>Honda</option>
+                    <option>Honda</option>
+
                 </select>
-                <select class="selector_modelo" disabled="true" style="width: 20%;" id="modelo">
+                <select class="selector" disabled="true" style="width: 200px;" id="modelo">
                     <option></option>
                 </select>
-                <select class="selector_año" disabled="true" style="width: 20%;" id="año">
+                <select class="selector" disabled="true" style="width: 200px;" id="año">
                     <option></option>
                 </select>
 
