solo falta detalles de css

--- a/Single.html
+++ b/Single.html
@@ -31,13 +31,7 @@
                     <option></option>
                     <option value="1">Toyota</option>
                     <option>Honda</option>
-                    <option>Honda</option>
-                    <option>Honda</option>
-                    <option>Honda</option>
-                    <option>Honda</option>
-                    <option>Honda</option>
-                    <option>Honda</option>
-                    <option>Honda</option>
+
 
                 </select>
                 <select class="selector" disabled="true" style="width: 200px;" id="modelo">
@@ -47,6 +41,10 @@
                     <option></option>
                 </select>
 
+            </div>
+            <div class="content_referencia">
+                <p>Referencia: <span id="">...</span></p>
+                <ul id="ul"></ul>
             </div>
         </div>
     </section>
