documentando el codigo

--- a/Single.html
+++ b/Single.html
@@ -44,7 +44,7 @@
             </div>
             <div class="content_referencia">
                 <p>Referencia: <span id="">...</span></p>
-                <ul id="ul" class="ul">
+                <ul id="listaRef" class="ul">
 
                 </ul>
             </div>
