Implementando docker listo

--- a/Single.html
+++ b/Single.html
@@ -37,7 +37,7 @@
                 <select class="selector" disabled="true" style="width: 200px;" id="modelo">
                     <option></option>
                 </select>
-                <select class="selector" disabled="true" style="width: 200px;" id="año">
+                <select class="selector" disabled="true" style="width: 200px;" id="anio">
                     <option></option>
                 </select>
 
@@ -56,9 +56,9 @@
             <p>Copyright © 2025</p>
         </div>
     </footer>
-    <script src="JS/jquery.js"></script>
+    <script src="js_sql/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-    <script src="JS/single.js"></script>
+    <script src="js_sql/single.js"></script>
 
 </body>
 
