--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <section id="jn_bio" class="jn_bio">
         <div class="jn_bio_p_content">
-            <p>Mi nombre es Joshua Nivar y tengo 24 años de edad. Soy estudiante de informática y en este sitio web
+            <p>Mi nombre es Joshua Nivar y tengo 24 anios de edad. Soy estudiante de informática y en este sitio web
                 estaré creando mi portafolio para entrar en este maravilloso mundo de la programación y conseguir mi
                 primer empleo como junior.</p>
             <p>Actualmente, trabajo en un repuesto de vehículos, por lo que he tenido algunas ideas para desarrollar
