Pequeño ajuste en stilos

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             src="Img/Página web en construcción pixel art with minimal color (1).png">
                         <div class="jn_works_slider_img_info">
                             <h2>Catálogo suspensión</h2>
-                            <p>Trabajos en desarrollo</p>
+                            <a href="Single.html">ver</a>
                         </div>
                     </div>
                 </div>
@@ -88,9 +88,9 @@
             <p>Copyright © 2025</p>
         </div>
     </footer>
-    <script src="JS/jquery.js"></script>
+    <script src="js_sql/jquery.js"></script>
     <script src="slick-1.8.1/slick/slick.js"></script>
-    <script src="JS/home.js"></script>
+    <script src="js_sql/home.js"></script>
 </body>
 
 </html>
